--- a/teaching.html
+++ b/teaching.html
@@ -273,10 +273,10 @@
         </td>
         <td style="text-align: left;">
           <ul>
-            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice401_visualizing_3d_rotation.py" target="_blank">Practice 401: Visualizing 3D Rotation</a></li>
-            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice402_visualizing_3d_translation.py" target="_blank">Practice 402: Visualizing 3D Translation</a></li>
-            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice403_visualizing_3d_scale.py" target="_blank">Practice 403: Visualizing 3D Scaling</a></li>
-            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice404_visualizing_3d_shear.py" target="_blank">Practice 404: Visualizing 3D Shearing</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice401_visualizing_3d_rotation.py" target="_blank">Practice 401: Visualize 3D Rotation</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice402_visualizing_3d_translation.py" target="_blank">Practice 402: Visualize 3D Translation</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice403_visualizing_3d_scale.py" target="_blank">Practice 403: Visualize 3D Scaling</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice404_visualizing_3d_shear.py" target="_blank">Practice 404: Visualize 3D Shearing</a></li>
             <li><a href="https://github.com/libigl/libigl/tree/main/tutorial/403_BoundedBiharmonicWeights" target="_blank">Practice 405: Linear Blend Skinning</a></li>
            </ul>
         </td>
@@ -290,27 +290,42 @@
     <tr>
       <td style="text-align: left;">Week 5,6</td>
         <td style="text-align: left;"><a href="https://www.icloud.com/keynote/058DtH5Twl_eVmhqT7BnOx7mA#Week5%2C6%5FRendering" target="_blank">Rendering Equation</a></td>
-<!--         <td style="text-align: left;">Rendering Equation</td> -->
         <td style="text-align: left;"><ul>
         <li>Direct Illumination</li>
         <li>Indirect Illumination</li>
-        </ul>  </td>
-        <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        </ul></td>
+        <td style="text-align: left;">
+          <ul>
+            <li><a href="https://mitsuba.readthedocs.io/en/latest/src/inverse_rendering/projective_sampling_integrators.html" target="_blank">Practice 501: Shadow Art</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice601_render_your_donut.py" target="_blank">Practice 601: Render Your First Donut</a></li>
+            <li><a href="https://www.shadertoy.com/view/3lsSzf" target="_blank">Practice 602: Shader Toy</a></li>
+           </ul>
+        </td>
+        <td style="text-align: left;">
+          <ul>
+            <li><a href="https://www.shadertoy.com/new" target="_blank">Shader Toy</a></li>
+          </ul>
+        </td>
     </tr>
-<!--     <tr>
-      <td style="text-align: left;">Week 6</td>
-      <td style="text-align: left;">Software Tools Part 2</td>
-      <td style="text-align: left;"></td>
-      <td style="text-align: left;"></td>
-      <td style="text-align: left;"></td>
-    </tr> -->
     <tr>
       <td style="text-align: left;">Week 7</td>
-      <td style="text-align: left;">Homography And Texture</td>
-      <td style="text-align: left;"></td>
-      <td style="text-align: left;"></td>
-      <td style="text-align: left;"></td>
+      <td style="text-align: left;">Texture Mapping</td>
+      <td style="text-align: left;"><ul>
+        <li>Quotient</li>
+        <li>Orbifold</li>
+        <li>Cone Points</li>
+        <li>Tutte Embedding</li>
+        </ul></td>
+      <td style="text-align: left;">
+        <li><a href="https://github.com/noamaig/euclidean_orbifolds" target="_blank">Practice 701: Orbifold Tutte Embeddings</a></li>
+        <li><a href="https://github.com/noamaig/hyperbolic_orbifolds" target="_blank">Practice 702: Hyperbolic Orbifold Tutte Embeddings</a></li>
+        <li><a href="https://github.com/noamaig/spherical_orbifolds" target="_blank">Practice 703: Spherical Orbifold Tutte Embeddings</a></li>
+      </td>
+      <td style="text-align: left;"><ul>
+        <li><a href="https://noamaig.github.io/html/projects/orbifold/orbifold_highres.pdf" target="_blank">Orbifold Tutte Embeddings (SIGGRAPH Asia 2015)</a></li>
+        <li><a href="https://noamaig.github.io/html/projects/hyperbolic/hyperbolic.pdf" target="_blank">Hyperbolic Orbifold Tutte Embeddings (SIGGRAPH Asia 2016)</a></li>
+        <li><a href="https://noamaig.github.io/html/projects/spherical/highres.pdf" target="_blank">Spherical Orbifold Tutte Embeddings (SIGGRAPH 2017)</a></li>
+      </ul></td>
     </tr>
     <tr>
       <td style="text-align: left;">Week 8</td>
