additional cmake material

--- a/teaching.html
+++ b/teaching.html
@@ -234,6 +234,7 @@
         <td style="text-align: left;">
             <ul>
             <li><a href="https://en.cppreference.com/w/" target="_blank">CPP Reference</a></li>
+            <li><a href="https://crascit.com/professional-cmake/" target="_blank">Professional CMake: A Practical Guide</a></li>
             </ul>
         </td>
     </tr>
