--- a/teaching.html
+++ b/teaching.html
@@ -92,8 +92,8 @@
         <img src="files/blender_tutorial.png" alt="Blender 4.0 Beginner Donut Tutorial" style="width: 12%; height: auto;">
       </a>
       </p>      
-      <!-- <a href="https://www.appliedhoudini.com/">Applied Houdini</a></p>
-      <a href="https://www.youtube.com/watch?v=B0J27sf9N1Y&list=PLjEaoINr3zgEPv5y--4MKpciLaoQYZB1Z">Blender 4.0 Beginner Donut Tutorial</a></p> -->
+      
+      <li>This could be you! Computer graphics is a cool field that has profound social impacts in science, technology, media, and entertainment. Individual contributions are appreciated and valued. If you have engineering skills lined up to exercise ideas effeciently (that is, problem solving skill), and more importantly, you have great ideas (that is, the ability to find interesting problems), then it is likely to be you, who presents cool stuff. You might also want to learn from the experts, check out their contributions at <a href="https://www.youtube.com/watch?v=gfct0aH2COw&list=PL7Fkn3UclHZOAFzXYCAQPZ9A2YtRn1rV2&index=4" target="_blank">Adobe Max Sneaks</a> and <a href="https://www.youtube.com/watch?v=vWfiYFGFa5g&list=PLJ8RjvesnvDMklimKDFLJsXfAs6lAYBsH&index=6" target="_blank">Oscar Sci-Tech Award</a> of the past 10 years. While watching, I encourage you to take some notes on topics that attract you most, so that you can do some research later (e.g. read their papers/codebases).</li>
     </ul>
 
     <h2>Course Information</h2>
