--- a/teaching.html
+++ b/teaching.html
@@ -310,7 +310,7 @@
     </tr>
     <tr>
       <td style="text-align: left;">Week 7</td>
-      <td style="text-align: left;">Texture Mapping</td>
+      <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f5ZQMqojS1Yjp8s1aU_GfWsg#Week7%5FTextureMapping" target="_blank">Texture Mapping</a></td>      
       <td style="text-align: left;"><ul>
         <li>Quotient</li>
         <li>Orbifold</li>
@@ -333,7 +333,11 @@
       <td style="text-align: left;">Intro To Tiling Theory</td>
       <td style="text-align: left;"></td>
       <td style="text-align: left;"></td>
-      <td style="text-align: left;"></td>
+      <td style="text-align: left;"><ul>
+        <li><a href="https://imagine.enpc.fr/~groueixt/escher/" target="_blank">Generative Escher Meshes (SIGGRAPH 2024)</a></li>
+        <li><a href="https://dl.acm.org/doi/pdf/10.1145/280814.280948" target="_blank">Computer-Generated Floral Ornament(SIGGRAPH 1998)</a></li>
+        <li><a href="https://www.amazon.com/Symmetries-Things-John-H-Conway/dp/1568812205" target="_blank">The Symmetries of Things (Chapters1,2,3,4)</a></li>
+      </ul></td>
     </tr>
     <tr>
         <td style="text-align: left;">Week 9</td>
