--- a/teaching.html
+++ b/teaching.html
@@ -344,13 +344,20 @@
         <td style="text-align: left;">Intro To Geometry Part 1</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><ul>
+        <li><a href="https://dl.acm.org/doi/abs/10.1145/3587421.3595439" target="_blank">Estimating Discrete Total Curvature with Per Triangle Normal Variation
+ (SIGGRAPH 2023)</a></li>
+      </ul></td>
     </tr>
         <td style="text-align: left;">Week 10</td>
         <td style="text-align: left;">Intro To Geometry Part 2</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><ul>
+        <li><a href="https://graphics.pixar.com/library/Kelvinlets/" target="_blank">Regularized Kelvinlets (SIGGRAPH 2017)</a></li>
+        <li><a href="https://graphics.pixar.com/library/DynaKelvinlets/" target="_blank">Dynamic Kelvinlets (SIGGRAPH 2018)</a></li>
+        <li><a href="https://graphics.pixar.com/library/SharpKelvinlets/paper.pdf" target="_blank">Sharp Kelvinlets (DigiPro 2019)</a></li>
+      </ul></td>
     </tr>
         <td style="text-align: left;">Week 11</td>
         <td style="text-align: left;">Intro To Animation</td>
