--- a/teaching.html
+++ b/teaching.html
@@ -216,7 +216,7 @@
     <tr>
         <td style="text-align: left;">Week 2</td>
         <td style="text-align: left;">
-            <a href="https://www.icloud.com/keynote/0b4llVMWZanFwhl-YfCkGUqlA#Week2%5FSoftwareTools%5FPart1" target="_blank">Software Tools Part 1</a>
+            <a href="https://www.icloud.com/keynote/0b4llVMWZanFwhl-YfCkGUqlA#Week2%5FSoftwareTools%5FPart1" target="_blank">Software Tools</a>
         </td>
         <td style="text-align: left;"><ul>
         <li>CMake</li>
@@ -315,7 +315,10 @@
         <li>Quotient</li>
         <li>Orbifold</li>
         <li>Cone Points</li>
+        <li>Embedding</li>
         <li>Tutte Embedding</li>
+        <li>Surface Parametrization</li>
+        <li>Criterions of Good Surface Parametrization</li>
         </ul></td>
       <td style="text-align: left;">
         <li><a href="https://github.com/noamaig/euclidean_orbifolds" target="_blank">Practice 701: Orbifold Tutte Embeddings</a></li>
@@ -330,9 +333,16 @@
     </tr>
     <tr>
       <td style="text-align: left;">Week 8</td>
-      <td style="text-align: left;">Intro To Tiling Theory</td>
-      <td style="text-align: left;"></td>
-      <td style="text-align: left;"></td>
+        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02ai910ILbBweBTFm10qSy68Q#Week8%5FIntroToTilingTheory" target="_blank">Intro To Tiling Theory</a></td> 
+      <td style="text-align: left;"><ul>
+        <li>Growth Rules of Plant-like Curves</li>
+        <li>SDS Loss</li>
+        <li>Symmetry Groups</li>
+        </ul></td>
+      <td style="text-align: left;">
+      <td style="text-align: left;"><ul>
+        <li><a href="https://www.geometrygames.org/KaleidoTile/index.html.en" target="_blank">Kaleido Tile</a></li>
+      </ul></td>
       <td style="text-align: left;"><ul>
         <li><a href="https://imagine.enpc.fr/~groueixt/escher/" target="_blank">Generative Escher Meshes (SIGGRAPH 2024)</a></li>
         <li><a href="https://dl.acm.org/doi/pdf/10.1145/280814.280948" target="_blank">Computer-Generated Floral Ornament(SIGGRAPH 1998)</a></li>
