--- a/teaching.html
+++ b/teaching.html
@@ -341,7 +341,7 @@
         </ul></td>
       <td style="text-align: left;">
       <td style="text-align: left;"><ul>
-        <li><a href="https://www.geometrygames.org/KaleidoTile/index.html.en" target="_blank">Kaleido Tile</a></li>
+        <li><a href="https://www.geometrygames.org/KaleidoTile/index.html.en" target="_blank">Practice 801: Kaleido Tile</a></li>
       </ul></td>
       <td style="text-align: left;"><ul>
         <li><a href="https://imagine.enpc.fr/~groueixt/escher/" target="_blank">Generative Escher Meshes (SIGGRAPH 2024)</a></li>
