--- a/teaching.html
+++ b/teaching.html
@@ -167,7 +167,7 @@
         <th style="text-align: left;">Lecture Slides</th>
         <th style="text-align: left;">Keywords</th>
         <th style="text-align: left;">In-Class Coding Practice</th>
-        <th style="text-align: left;">Other Helpful Resources</th>
+        <th style="text-align: left;">Assigned Reading</th>
     </tr>
     <tr>
         <td style="text-align: left;">Week 0</td>
