--- a/teaching.html
+++ b/teaching.html
@@ -369,7 +369,7 @@
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 11</td>
-        <td style="text-align: left;">Intro To Animation</td>
+        <td style="text-align: left;">Intro To Computer Animation</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
