--- a/teaching.html
+++ b/teaching.html
@@ -350,7 +350,7 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 9</td>
-        <td style="text-align: left;">Intro To Geometry Part 1</td>
+        <td style="text-align: left;">Intro To Discrete Geometry Part 1</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"><ul>
@@ -359,7 +359,7 @@
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 10</td>
-        <td style="text-align: left;">Intro To Geometry Part 2</td>
+        <td style="text-align: left;">Intro To Discrete Geometry Part 2</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"><ul>
