--- a/teaching.html
+++ b/teaching.html
@@ -350,12 +350,22 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 9</td>
-        <td style="text-align: left;">Intro To Discrete Geometry (Fundamentals)</td>
-        <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f8C_FFcBuqVYv6MzssLRK5IA#Week9%5FIntroToDiscreteGeometry%5FFundamentals" target="_blank">Intro To Discrete Geometry (Fundamentals)</a></td>
+        <td style="text-align: left;"><ul>
+        <li>Meshes</li>
+        <li>Data Structure of Meshes</li>
+        <li>Pipeline and Tasks of Digital Geometry Processing</li>
+        <li>Delaunay Triangulation</li>
+        <li>Curvature</li>
+        </ul></td>
+        <td style="text-align: left;"><ul>
+        <li><a href="https://www.meshlab.net/" target="_blank">Practice 901: Meshlab</a></li>
+        <li><a href="https://github.com/CGAL/cgal-swig-bindings/blob/main/examples/python/polygonal_triangulation.py" target="_blank">Practice 902: Constrained Delaunay Triangulation</a></li>
+      </ul></td>
         <td style="text-align: left;"><ul>
         <li><a href="https://dl.acm.org/doi/abs/10.1145/3587421.3595439" target="_blank">Estimating Discrete Total Curvature with Per Triangle Normal Variation
  (SIGGRAPH 2023)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=0av77zpBeH8&t=705s" target="_blank">Curvature Talk by Chaim Goodman-Strauss at MoMath</a></li>
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 10</td>
