--- a/assignment2.html
+++ b/assignment2.html
@@ -77,7 +77,7 @@
             To run the image ray tracing program, use the following command:
         </p>
         <p><code> cd Bin</code></p>
-        <p><code> ./Assignment2 --in "path to test.point.ray" –out "path to output image file"</code></p>
+        <p><code> ./Assignment2 --in "path to test.point.ray" –-out "path to output image file"</code></p>
     </div>
 
     <div class="section">
