--- a/teaching.html
+++ b/teaching.html
@@ -359,7 +359,7 @@
         <li>Curvature</li>
         </ul></td>
         <td style="text-align: left;"><ul>
-        <li><a href="https://www.meshlab.net/" target="_blank">Practice 901: Meshlab</a></li>
+        <li><a href="https://www.meshlab.net/" target="_blank">Practice 901: Filters of Meshlab</a></li>
         <li><a href="https://github.com/CGAL/cgal-swig-bindings/blob/main/examples/python/polygonal_triangulation.py" target="_blank">Practice 902: Constrained Delaunay Triangulation</a></li>
       </ul></td>
         <td style="text-align: left;"><ul>
@@ -369,20 +369,33 @@
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 10</td>
-        <td style="text-align: left;">Intro To Discrete Geometry (Applications)</td>
-        <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/06d8I5Sz_wj4vtDgHNSQK7PYQ#Week10%5FIntroToGeometryApplications" target="_blank">Intro To Discrete Geometry (Applications)</a></td>
+        <td style="text-align: left;"><ul>
+        <li>Mesh Deformation</li>
+        <li>Cage-based Deformation</li>
+        <li>Intuition of the Three Terms in Elastic Potential Energy</li>
+        <li>What is Kelvinlets</li>
+        <li>Strengths of Kelvinlets</li>
+        </ul></td>
+        <td style="text-align: left;"><ul>
+        <li><a href="https://github.com/libigl/libigl/blob/main/tutorial/405_AsRigidAsPossible/main.cpp" target="_blank">Practice 1001: As Rigid As Possible</a></li>
+        <li><a href="https://github.com/libigl/libigl/blob/main/tutorial/407_BiharmonicCoordinates/main.cpp" target="_blank">Practice 1002: Biharmonic Coordinates Deformation</a></li>
+        <li><a href="https://github.com/libigl/libigl/blob/main/tutorial/408_DirectDeltaMush/main.cpp" target="_blank">Practice 1003: Direct Delta Mush</a></li>
+        <li><a href="https://github.com/libigl/libigl/blob/main/tutorial/409_Kelvinletss/main.cpp" target="_blank">Practice 1004: Regularized Kelvinlets</a></li>
+        <li><a href="https://graphics.pixar.com/library/DynaKelvinlets/" target="_blank">Practice 1005: Dynamic Kelvinlets</a></li>
+      </ul></td>
         <td style="text-align: left;"><ul>
         <li><a href="https://graphics.pixar.com/library/Kelvinlets/" target="_blank">Regularized Kelvinlets (SIGGRAPH 2017)</a></li>
-        <li><a href="https://graphics.pixar.com/library/DynaKelvinlets/" target="_blank">Dynamic Kelvinlets (SIGGRAPH 2018)</a></li>
-        <li><a href="https://graphics.pixar.com/library/SharpKelvinlets/paper.pdf" target="_blank">Sharp Kelvinlets (DigiPro 2019)</a></li>
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 11</td>
         <td style="text-align: left;">Intro To Computer Animation</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><ul>
+        <li><a href="https://graphics.pixar.com/library/DynaKelvinlets/" target="_blank">Dynamic Kelvinlets (SIGGRAPH 2018)</a></li>
+        <li><a href="https://graphics.pixar.com/library/SharpKelvinlets/paper.pdf" target="_blank">Sharp Kelvinlets (DigiPro 2019)</a></li>
+      </ul></td>
     </tr>
         <td style="text-align: left;">Week 12</td>
         <td style="text-align: left;">Intro To Neural Geometry Processing And Neural Simulation</td>
