--- a/teaching.html
+++ b/teaching.html
@@ -352,7 +352,7 @@
         <td style="text-align: left;">Week 9</td>
         <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f8C_FFcBuqVYv6MzssLRK5IA#Week9%5FIntroToDiscreteGeometry%5FFundamentals" target="_blank">Intro To Discrete Geometry (Fundamentals)</a></td>
         <td style="text-align: left;"><ul>
-        <li>Meshes</li>
+        <li>What is a Mesh?</li>
         <li>Data Structure of Meshes</li>
         <li>Pipeline and Tasks of Digital Geometry Processing</li>
         <li>Delaunay Triangulation</li>
@@ -371,7 +371,7 @@
         <td style="text-align: left;">Week 10</td>
         <td style="text-align: left;"><a href="https://www.icloud.com/keynote/06d8I5Sz_wj4vtDgHNSQK7PYQ#Week10%5FIntroToGeometryApplications" target="_blank">Intro To Discrete Geometry (Applications)</a></td>
         <td style="text-align: left;"><ul>
-        <li>Mesh Deformation</li>
+        <li>What is Mesh Deformation?</li>
         <li>Cage-based Deformation</li>
         <li>Intuition of the Three Terms in Elastic Potential Energy</li>
         <li>What is Kelvinlets</li>
