--- a/teaching.html
+++ b/teaching.html
@@ -374,7 +374,7 @@
         <li>What is Mesh Deformation?</li>
         <li>Cage-based Deformation</li>
         <li>Intuition of the Three Terms in Elastic Potential Energy</li>
-        <li>What is Kelvinlets</li>
+        <li>What is Kelvinlets?</li>
         <li>Strengths of Kelvinlets</li>
         </ul></td>
         <td style="text-align: left;"><ul>
