--- a/teaching.html
+++ b/teaching.html
@@ -389,16 +389,18 @@
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 11</td>
-        <td style="text-align: left;">Intro To Computer Animation</td>
+        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/047xcA2K7Ih6wRb-BuzliAUOQ#Week11%5FIntroToAnimation" target="_blank">Intro To Computer Animation</a></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"><ul>
         <li><a href="https://graphics.pixar.com/library/DynaKelvinlets/" target="_blank">Dynamic Kelvinlets (SIGGRAPH 2018)</a></li>
         <li><a href="https://graphics.pixar.com/library/SharpKelvinlets/paper.pdf" target="_blank">Sharp Kelvinlets (DigiPro 2019)</a></li>
+        <li><a href="https://www.tkim.graphics/DYNAMIC_DEFORMABLES/" target="_blank">Dynamic Deformables (SIGGRAPH Course 2020, 2022)</a></li>
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 12</td>
         <td style="text-align: left;">Intro To Neural Geometry Processing And Neural Simulation</td>
+             <li><a href="https://www.cs.ubc.ca/~rbridson/fluidsimulation/fluids_notes.pdf" target="_blank">Fluid Simulation (SIGGRAPH Course 2007)</a></li>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"><ul>
@@ -409,7 +411,10 @@
         <td style="text-align: left;">PDE Strikes Back</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><ul>
+        <li><a href="https://www.amazon.com/Introduction-Differential-Equations-Applications-Mathematics/dp/0486652513" target="_blank">Zachmanoglou's Intro To Partial Differential Equations with Applications</a></li>
+        <li><a href="https://www.youtube.com/watch?v=K34uoFQ5Inc&list=PLGisQzSqdJh8OWzDoKI9bf0ZkGjVLN5BU" target="_blank">Numerical Methods for PDEs</a></li>
+        </ul></td>
     </tr>
 </table>
 
