--- a/teaching.html
+++ b/teaching.html
@@ -390,8 +390,13 @@
     </tr>
         <td style="text-align: left;">Week 11</td>
         <td style="text-align: left;"><a href="https://www.icloud.com/keynote/047xcA2K7Ih6wRb-BuzliAUOQ#Week11%5FIntroToAnimation" target="_blank">Intro To Computer Animation</a></td>
-        <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><ul>
+        <li>Elastic Wave Equation</li>
+        <li>Helmholtz decomposition</li>
+        </ul></td>
+        <td style="text-align: left;"><ul>
+        <li><a href="https://graphics.pixar.com/library/DynaKelvinlets/" target="_blank">Practice 1101: Using Dynamic Kelvinlets in Houdini</a></li>
+      </ul></td>
         <td style="text-align: left;"><ul>
         <li><a href="https://graphics.pixar.com/library/DynaKelvinlets/" target="_blank">Dynamic Kelvinlets (SIGGRAPH 2018)</a></li>
         <li><a href="https://graphics.pixar.com/library/SharpKelvinlets/paper.pdf" target="_blank">Sharp Kelvinlets (DigiPro 2019)</a></li>
