--- a/teaching.html
+++ b/teaching.html
@@ -391,6 +391,7 @@
         <td style="text-align: left;">Week 11</td>
         <td style="text-align: left;"><a href="https://www.icloud.com/keynote/047xcA2K7Ih6wRb-BuzliAUOQ#Week11%5FIntroToAnimation" target="_blank">Intro To Computer Animation</a></td>
         <td style="text-align: left;"><ul>
+        <li>What is Dynamic Kelvinlets?</li>
         <li>Elastic Wave Equation</li>
         <li>Helmholtz decomposition</li>
         </ul></td>
