--- a/assignment4.html
+++ b/assignment4.html
@@ -59,7 +59,7 @@
             The goal is to create a deformation in Houdini, using the Dynamic Kelvinlets plugin. The deformatioin should aim to be as fun and creative as you can imagine.
         </p>
         <h3>Step1: Imagine.</h3>
-        <p>What would be a cool animation you want to show others? From the in-class coding practice, we've seen other people come us with dancing elephant, deforming sponge, using rubber band to deform a duck ballon, moving the arms of an octupus, making the armadillo man dance. What else might be cool? What's your story?</p>
+        <p>What would be a cool animation you want to show others? From the in-class coding practice, we've seen other people come us with dancing elephant, deforming sponge, using rubber band to deform a duck ballon, moving the arms of an octupus, making the armadillo man dance. And at this point, you've seen all the existing SIGGRAPH Technical Paper Trailers. What else might be cool? What's your story?</p>
         </p>
         </p>
         <h3>Step2: Find a data you are interested in working with.</h3>
