--- a/teaching.html
+++ b/teaching.html
@@ -420,8 +420,15 @@
         </ul></td>
     </tr>
        <td style="text-align: left;">Week 13</td>
-        <td style="text-align: left;">PDE Strikes Back</td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><a href=" https://www.icloud.com/keynote/012D8y7ygcO2z_ahNvzDb_MGw#Week13%5FPDEStrikesBack target="_blank">PDE Strikes Back</a></td>                    
+        <td style="text-align: left;"><ul>
+        <li>Standard Form of Optimization</li>
+        <li>Feasibility of Optimization</li>
+        <li>PDE VS. ODE</li>
+        <li>Intuition of Laplace Equation, Heat Equation, Wave Equation</li>
+        <li>Numerical Solve of Laplace Equation</li>
+        <li>Prescribing Boundary Conditions</li>
+        </ul></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"><ul>
         <li><a href="https://www.amazon.com/Introduction-Differential-Equations-Applications-Mathematics/dp/0486652513" target="_blank">Zachmanoglou's Intro To Partial Differential Equations with Applications</a></li>
