--- a/teaching.html
+++ b/teaching.html
@@ -429,7 +429,9 @@
         <li>Numerical Solve of Laplace Equation</li>
         <li>Prescribing Boundary Conditions</li>
         </ul></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><ul>
+        <li>N/A</li>
+         </ul></td>
         <td style="text-align: left;"><ul>
         <li><a href="https://www.amazon.com/Introduction-Differential-Equations-Applications-Mathematics/dp/0486652513" target="_blank">Zachmanoglou's Intro To Partial Differential Equations with Applications</a></li>
         <li><a href="https://www.youtube.com/watch?v=K34uoFQ5Inc&list=PLGisQzSqdJh8OWzDoKI9bf0ZkGjVLN5BU" target="_blank">Numerical Methods for PDEs</a></li>
