--- a/teaching.html
+++ b/teaching.html
@@ -433,7 +433,7 @@
         <li>N/A</li>
          </ul></td>
         <td style="text-align: left;"><ul>
-        <li><a href="files/PDEbook.pdf" target="_blank">Zachmanoglou's Intro To Partial Differential Equations with Applications</a></li>
+        <li><a href="./files/PDEbook.pdf" target="_blank">Zachmanoglou's Intro To Partial Differential Equations with Applications</a></li>
         <li><a href="https://www.youtube.com/watch?v=K34uoFQ5Inc&list=PLGisQzSqdJh8OWzDoKI9bf0ZkGjVLN5BU" target="_blank">Numerical Methods for PDEs</a></li>
         </ul></td>
     </tr>
