--- a/teaching.html
+++ b/teaching.html
@@ -58,6 +58,8 @@
     <h2>Teaching Assistant</h2>
     <p>Abhijeet Chowdhury</p>
     <p>Email: <a href="mailto:chowdhury.ab@northeastern.edu">chowdhury.ab@northeastern.edu</a></p>
+    <p>Taiwei Cui</p>
+    <p>Email: <a href="mailto:cui.ta@northeastern.edu">cui.ta@northeastern.edu</a></p>
 
     <h2>Meetings</h2>
     <p>TF 2:00PM - 3:40PM</p>
