--- a/teaching.html
+++ b/teaching.html
@@ -55,7 +55,7 @@
     <p>Crane He Chen</p>
     <p>Email: <a href="mailto:h.chen1@northeastern.edu">h.chen1@northeastern.edu</a></p>
     
-    <h2>Teaching Assistant</h2>
+    <h2>Teaching Assistants</h2>
     <p>Abhijeet Chowdhury</p>
     <p>Email: <a href="mailto:chowdhury.ab@northeastern.edu">chowdhury.ab@northeastern.edu</a></p>
     <p>Taiwei Cui</p>
