--- a/teaching.html
+++ b/teaching.html
@@ -150,13 +150,13 @@
       <li>You are encouraged to post questions/bugs on Piazza for open discussion.</li>
     </ul>
 
-    <h2>Assignments</h2>
+<!--     <h2>Assignments</h2>
     <ul>
       <li> <a href="./assignment1.html" target="_blank">Assignment1: Beier-Neely morfing!</a>(NOT A TYPO!!! People thought it is morphing, but <a href="https://www.disneyplus.com/series/light-magic/3OtlwhtW6Z7E" target="_blank">it is morfing when we invented this technology at ILM</a>.)</li>
       <li><a href="./assignment2.html" target="_blank">Assignment2: Peek the museum through a glass egg!</a></li>
       <li><a href="./assignment3.html" target="_blank">Assignment3: Does it tile?</a></li>
       <li><a href="./assignment4.html" target="_blank">Assignment4: Animate It!</a></li>
-    </ul>
+    </ul> -->
  
     <h2>Intended Course Roadmap</h2>
 <video autoplay loop muted playsinline style="width: 30%; height: auto;">
