--- a/teaching.html
+++ b/teaching.html
@@ -61,8 +61,8 @@
     <p>Taiwei Cui</p>
     <p>Email: <a href="mailto:cui.ta@northeastern.edu">cui.ta@northeastern.edu</a></p>
 
-    <h2>Meetings</h2>
-    <p>TF 2:00PM - 3:40PM</p>
+<!--     <h2>Meetings</h2>
+    <p>TF 2:00PM - 3:40PM</p> -->
 
     <!-- <h2>Syllabus</h2>
     <p><a href="./files/LaplacianCourse_Syllabus.pdf" target="_blank">Download Syllabus</a></p> -->
