--- a/teaching.html
+++ b/teaching.html
@@ -58,8 +58,10 @@
     <h2>Teaching Assistants</h2>
     <p>Abhijeet Chowdhury</p>
     <p>Email: <a href="mailto:chowdhury.ab@northeastern.edu">chowdhury.ab@northeastern.edu</a></p>
+    <p>Office Hour: Thursday, 2:30PM-3:30PM</p>
     <p>Taiwei Cui</p>
     <p>Email: <a href="mailto:cui.ta@northeastern.edu">cui.ta@northeastern.edu</a></p>
+    <p>Office Hour: Tuesday, 12PM-1PM</p>
 
 <!--     <h2>Meetings</h2>
     <p>TF 2:00PM - 3:40PM</p> -->
@@ -217,7 +219,7 @@
     <tr>
         <td style="text-align: left;">Week 2</td>
         <td style="text-align: left;">
-            <a href="https://www.icloud.com/keynote/0b4llVMWZanFwhl-YfCkGUqlA#Week2%5FSoftwareTools%5FPart1" target="_blank">Software Tools</a>
+            <!-- <a href="https://www.icloud.com/keynote/0b4llVMWZanFwhl-YfCkGUqlA#Week2%5FSoftwareTools%5FPart1" target="_blank">Software Tools</a> -->
         </td>
         <td style="text-align: left;"><ul>
         <li>CMake</li>
@@ -241,7 +243,10 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 3</td>
-        <td style="text-align: left;"> <a href="https://www.icloud.com/keynote/07efE3VV489D8gS0b3ZkLK40Q#Week3%5FMorfing" target="_blank">Morfing</a></td>
+        <!-- <td style="text-align: left;"> <a href="https://www.icloud.com/keynote/07efE3VV489D8gS0b3ZkLK40Q#Week3%5FMorfing" target="_blank">Morfing</a></td> -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;">
         <ul>
         <li>Image Acquisition Methods</li>
@@ -263,7 +268,10 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 4</td>
-        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02edLuLYSkDfz1rmaZKoeLFMQ#Week4%5FSpatialTransformations" target="_blank">Spatial Transformations</a></td>
+        <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02edLuLYSkDfz1rmaZKoeLFMQ#Week4%5FSpatialTransformations" target="_blank">Spatial Transformations</a></td> -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;">
         <ul>
         <li>Transformation Matrices</li>
@@ -291,7 +299,10 @@
     </tr>
     <tr>
       <td style="text-align: left;">Week 5,6</td>
-        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/058DtH5Twl_eVmhqT7BnOx7mA#Week5%2C6%5FRendering" target="_blank">Rendering Equation</a></td>
+        <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/058DtH5Twl_eVmhqT7BnOx7mA#Week5%2C6%5FRendering" target="_blank">Rendering Equation</a></td> -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;"><ul>
         <li>Direct Illumination</li>
         <li>Indirect Illumination</li>
@@ -311,7 +322,10 @@
     </tr>
     <tr>
       <td style="text-align: left;">Week 7</td>
-      <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f5ZQMqojS1Yjp8s1aU_GfWsg#Week7%5FTextureMapping" target="_blank">Texture Mapping</a></td>      
+      <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f5ZQMqojS1Yjp8s1aU_GfWsg#Week7%5FTextureMapping" target="_blank">Texture Mapping</a></td>       -->
+      <td style="text-align: left;"><ul>
+        <!-- <li>N/A</li> -->
+         </ul></td>
       <td style="text-align: left;"><ul>
         <li>Quotient</li>
         <li>Orbifold</li>
@@ -334,8 +348,11 @@
     </tr>
     <tr>
       <td style="text-align: left;">Week 8</td>
-        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02ai910ILbBweBTFm10qSy68Q#Week8%5FIntroToTilingTheory" target="_blank">Intro To Tiling Theory</a></td> 
-      <td style="text-align: left;"><ul>
+        <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02ai910ILbBweBTFm10qSy68Q#Week8%5FIntroToTilingTheory" target="_blank">Intro To Tiling Theory</a></td>  -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
+        <td style="text-align: left;"><ul>
         <li>Growth Rules of Plant-like Curves</li>
         <li>SDS Loss</li>
         <li>Symmetry Groups</li>
@@ -351,7 +368,10 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 9</td>
-        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f8C_FFcBuqVYv6MzssLRK5IA#Week9%5FIntroToDiscreteGeometry%5FFundamentals" target="_blank">Intro To Discrete Geometry (Fundamentals)</a></td>
+        <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f8C_FFcBuqVYv6MzssLRK5IA#Week9%5FIntroToDiscreteGeometry%5FFundamentals" target="_blank">Intro To Discrete Geometry (Fundamentals)</a></td> -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;"><ul>
         <li>What is a Mesh?</li>
         <li>Data Structure of Meshes</li>
@@ -370,7 +390,10 @@
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 10</td>
-        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/06d8I5Sz_wj4vtDgHNSQK7PYQ#Week10%5FIntroToGeometryApplications" target="_blank">Intro To Discrete Geometry (Applications)</a></td>
+        <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/06d8I5Sz_wj4vtDgHNSQK7PYQ#Week10%5FIntroToGeometryApplications" target="_blank">Intro To Discrete Geometry (Applications)</a></td> -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;"><ul>
         <li>What is Mesh Deformation?</li>
         <li>Cage-based Deformation</li>
@@ -390,7 +413,10 @@
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 11</td>
-        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/047xcA2K7Ih6wRb-BuzliAUOQ#Week11%5FIntroToAnimation" target="_blank">Intro To Computer Animation</a></td>
+        <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/047xcA2K7Ih6wRb-BuzliAUOQ#Week11%5FIntroToAnimation" target="_blank">Intro To Computer Animation</a></td> -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;"><ul>
         <li>What is Dynamic Kelvinlets?</li>
         <li>Elastic Wave Equation</li>
@@ -406,7 +432,10 @@
       </ul></td>
     </tr>
         <td style="text-align: left;">Week 12</td>
-        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0a8KB47IK5HJjOUThDcF1OOcw#Week12%5FIntroToNeuralGeometryAndSimulation" target="_blank">(Neural) Fluid Simulation</a></td>
+        <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0a8KB47IK5HJjOUThDcF1OOcw#Week12%5FIntroToNeuralGeometryAndSimulation" target="_blank">(Neural) Fluid Simulation</a></td> -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;"><ul>
         <li>Intuition of Navier-Stokes Equations</li>
         <li>Lagrangian Method</li>
@@ -422,7 +451,10 @@
         </ul></td>
     </tr>
        <td style="text-align: left;">Week 13</td>
-        <td style="text-align: left;"><a href=" https://www.icloud.com/keynote/012D8y7ygcO2z_ahNvzDb_MGw#Week13%5FPDEStrikesBack target="_blank">PDE Strikes Back</a></td>                    
+        <!-- <td style="text-align: left;"><a href=" https://www.icloud.com/keynote/012D8y7ygcO2z_ahNvzDb_MGw#Week13%5FPDEStrikesBack target="_blank">PDE Strikes Back</a></td>                     -->
+        <td style="text-align: left;"><ul>
+          <!-- <li>N/A</li> -->
+           </ul></td>
         <td style="text-align: left;"><ul>
         <li>Standard Form of Optimization</li>
         <li>Feasibility of Optimization</li>
