--- a/teaching.html
+++ b/teaching.html
@@ -219,7 +219,7 @@
     <tr>
         <td style="text-align: left;">Week 2</td>
         <td style="text-align: left;">
-            <!-- <a href="https://www.icloud.com/keynote/0b4llVMWZanFwhl-YfCkGUqlA#Week2%5FSoftwareTools%5FPart1" target="_blank">Software Tools</a> -->
+            <a href="https://www.icloud.com/keynote/0b4llVMWZanFwhl-YfCkGUqlA#Week2%5FSoftwareTools%5FPart1" target="_blank">Software Tools</a>
         </td>
         <td style="text-align: left;"><ul>
         <li>CMake</li>
