--- a/teaching.html
+++ b/teaching.html
@@ -302,6 +302,7 @@
             <td style="text-align: left;">
               <ul>
                 <li><a href="./files/p245-shoemake.pdf" target="_blank">Animating Rotation with Quaternion Curves (SIGGRAPH '85)</a></li>
+                  <li><a href="https://igl.ethz.ch/projects/bbw/" target="_blank">Bounded Biharmonic Weights for Real-Time Deformation (SIGGRAPH 2011)</a></li>
                 <li><a href="./files/A Mathematical Introduction to Robotic Manipulation.pdf" target="_blank">A Mathematical Introduction to Robotic Manipulation</a></li>
               </ul>
             </td>
