--- a/teaching.html
+++ b/teaching.html
@@ -106,17 +106,19 @@
     </ul>
 
     <h2>Student Results</h2>
-    <video autoplay loop muted playsinline style="height: 200px; width: auto;">
-        <source src="./files/output09.mp4" type="video/mp4">
-    </video>
-    <video autoplay loop muted playsinline style="height: 200px; width: auto;">
-        <source src="./files/ducky.mp4" type="video/mp4">
-    </video>
+    <img src="./files/lines1.png" style="height: 200px; width: auto;">
+    <img src="./files/wnag_ding.gif" alt="GIF Animation" style="height: 200px; width: auto;">
+    <br>
+    <img src="./files/lines2.png" style="height: 200px; width: auto;">
+    <img src="./files/taycan_su7.gif" alt="GIF Animation" style="height: 200px; width: auto;">
+    <br>
     <img src="./files/render1.jpg" style="height: 200px; width: auto;">
     <img src="./files/render2.bmp" style="height: 200px; width: auto;">
+    <video autoplay loop muted playsinline style="height: 200px; width: auto;">
+      <source src="./files/ducky.mp4" type="video/mp4">
+  </video>
 
     
-
     <h2>Prerequisites</h2>
     <ul>
       <li>Some knowledge of linear algebra.</li>
