--- a/teaching.html
+++ b/teaching.html
@@ -311,8 +311,8 @@
         </tr>
         <tr>
           <td style="text-align: left;">Week 5,6</td>
-            <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/058DtH5Twl_eVmhqT7BnOx7mA#Week5%2C6%5FRendering" target="_blank">Rendering Equation</a></td> -->
-            <td style="text-align: left;"><ul>
+            <td style="text-align: left;"><a href="https://www.icloud.com/keynote/058DtH5Twl_eVmhqT7BnOx7mA#Week5%2C6%5FRendering" target="_blank">Rendering Equation</a></td>
+            <!-- <td style="text-align: left;"><ul> -->
               <!-- <li>N/A</li> -->
                </ul></td>
             <td style="text-align: left;"><ul>
