--- a/teaching.html
+++ b/teaching.html
@@ -112,8 +112,12 @@
     <img src="./files/lines2.png" style="height: 200px; width: auto;">
     <img src="./files/taycan_su7.gif" alt="GIF Animation" style="height: 200px; width: auto;">
     <br>
+    <img src="./files/test_creative6.jpg" style="height: 200px; width: auto;">
+    <img src="./files/test_creative8.jpg" style="height: 200px; width: auto;">
+    <img src="./files/ss.jpg" style="height: 200px; width: auto;">
     <img src="./files/render1.jpg" style="height: 200px; width: auto;">
-    <img src="./files/render2.bmp" style="height: 200px; width: auto;">
+    <img src="./files/torus_checker.jpg" style="height: 200px; width: auto;">
+    <!-- <img src="./files/render2.bmp" style="height: 200px; width: auto;"> -->
     <video autoplay loop muted playsinline style="height: 200px; width: auto;">
       <source src="./files/ducky.mp4" type="video/mp4">
   </video>
