--- a/teaching.html
+++ b/teaching.html
@@ -338,8 +338,8 @@
         </tr>
         <tr>
           <td style="text-align: left;">Week 7</td>
-          <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f5ZQMqojS1Yjp8s1aU_GfWsg#Week7%5FTextureMapping" target="_blank">Texture Mapping</a></td>       -->
-          <td style="text-align: left;"><ul>
+          <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f5ZQMqojS1Yjp8s1aU_GfWsg#Week7%5FTextureMapping" target="_blank">Texture Mapping</a></td>      
+          <!-- <td style="text-align: left;"><ul> -->
             <!-- <li>N/A</li> -->
              </ul></td>
           <td style="text-align: left;"><ul>
@@ -364,8 +364,8 @@
         </tr>
         <tr>
           <td style="text-align: left;">Week 8</td>
-            <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02ai910ILbBweBTFm10qSy68Q#Week8%5FIntroToTilingTheory" target="_blank">Intro To Tiling Theory</a></td>  -->
-            <td style="text-align: left;"><ul>
+            <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02ai910ILbBweBTFm10qSy68Q#Week8%5FIntroToTilingTheory" target="_blank">Intro To Tiling Theory</a></td> 
+            <!-- <td style="text-align: left;"><ul> -->
               <!-- <li>N/A</li> -->
                </ul></td>
             <td style="text-align: left;"><ul>
