--- a/teaching.html
+++ b/teaching.html
@@ -384,8 +384,8 @@
         </tr>
         <tr>
             <td style="text-align: left;">Week 9</td>
-            <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f8C_FFcBuqVYv6MzssLRK5IA#Week9%5FIntroToDiscreteGeometry%5FFundamentals" target="_blank">Intro To Discrete Geometry (Fundamentals)</a></td> -->
-            <td style="text-align: left;"><ul>
+            <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0f8C_FFcBuqVYv6MzssLRK5IA#Week9%5FIntroToDiscreteGeometry%5FFundamentals" target="_blank">Intro To Discrete Geometry (Fundamentals)</a></td>
+            <!-- <td style="text-align: left;"><ul> -->
               <!-- <li>N/A</li> -->
                </ul></td>
             <td style="text-align: left;"><ul>
@@ -406,8 +406,8 @@
           </ul></td>
         </tr>
             <td style="text-align: left;">Week 10</td>
-            <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/06d8I5Sz_wj4vtDgHNSQK7PYQ#Week10%5FIntroToGeometryApplications" target="_blank">Intro To Discrete Geometry (Applications)</a></td> -->
-            <td style="text-align: left;"><ul>
+            <td style="text-align: left;"><a href="https://www.icloud.com/keynote/06d8I5Sz_wj4vtDgHNSQK7PYQ#Week10%5FIntroToGeometryApplications" target="_blank">Intro To Discrete Geometry (Applications)</a></td>
+            <!-- <td style="text-align: left;"><ul> -->
               <!-- <li>N/A</li> -->
                </ul></td>
             <td style="text-align: left;"><ul>
