--- a/teaching.html
+++ b/teaching.html
@@ -429,8 +429,8 @@
           </ul></td>
         </tr>
             <td style="text-align: left;">Week 11</td>
-            <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/047xcA2K7Ih6wRb-BuzliAUOQ#Week11%5FIntroToAnimation" target="_blank">Intro To Computer Animation</a></td> -->
-            <td style="text-align: left;"><ul>
+            <td style="text-align: left;"><a href="https://www.icloud.com/keynote/047xcA2K7Ih6wRb-BuzliAUOQ#Week11%5FIntroToAnimation" target="_blank">Intro To Computer Animation</a></td>
+            <!-- <td style="text-align: left;"><ul> -->
               <!-- <li>N/A</li> -->
                </ul></td>
             <td style="text-align: left;"><ul>
@@ -448,8 +448,8 @@
           </ul></td>
         </tr>
             <td style="text-align: left;">Week 12</td>
-            <!-- <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0a8KB47IK5HJjOUThDcF1OOcw#Week12%5FIntroToNeuralGeometryAndSimulation" target="_blank">(Neural) Fluid Simulation</a></td> -->
-            <td style="text-align: left;"><ul>
+            <td style="text-align: left;"><a href="https://www.icloud.com/keynote/0a8KB47IK5HJjOUThDcF1OOcw#Week12%5FIntroToNeuralGeometryAndSimulation" target="_blank">(Neural) Fluid Simulation</a></td>
+            <!-- <td style="text-align: left;"><ul> -->
               <!-- <li>N/A</li> -->
                </ul></td>
             <td style="text-align: left;"><ul>
@@ -467,8 +467,8 @@
             </ul></td>
         </tr>
            <td style="text-align: left;">Week 13</td>
-            <!-- <td style="text-align: left;"><a href=" https://www.icloud.com/keynote/012D8y7ygcO2z_ahNvzDb_MGw#Week13%5FPDEStrikesBack target="_blank">PDE Strikes Back</a></td>                     -->
-            <td style="text-align: left;"><ul>
+            <td style="text-align: left;"><a href=" https://www.icloud.com/keynote/012D8y7ygcO2z_ahNvzDb_MGw#Week13%5FPDEStrikesBack target="_blank">PDE Strikes Back</a></td>                    
+            <!-- <td style="text-align: left;"><ul> -->
               <!-- <li>N/A</li> -->
                </ul></td>
             <td style="text-align: left;"><ul>
